fix: align address section

--- a/css/style.sass
+++ b/css/style.sass
@@ -380,6 +380,7 @@ $height: 550px
   height: 345px
 
 .address-section
+  margin-top: 40px
   margin-left: 100px
   border-left: 3px solid #51f8d1
 
